update jupyter notebook example

--- a/examples/clojupyter-example.ipynb
+++ b/examples/clojupyter-example.ipynb
@@ -1,19 +1,30 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clojupyter + oz example\n",
+    "\n",
+    "This notebook demonstrates basic usage of oz from a Jupyter notebook using the Clojuypyter kernel.\n",
+    "\n",
+    "Note that the visualizations below may not render if you're looking at this on GitHub, but will render if you load the notebook into a running Jupyter instance."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "(require '[clojupyter.misc.helper :as helper])\n",
-    "(helper/add-dependencies '[metasoarous/oz \"1.5.0-SNAPSHOT\"])\n",
+    "(helper/add-dependencies '[metasoarous/oz \"1.5.0\"])\n",
     "(require '[oz.notebook.clojupyter :as oz])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +32,7 @@
       "text/html": [
        "\n",
        "<div>\n",
-       "  <div id='uuid-d9664aa6-5451-4c5e-975d-a76a6e63fc60'></div>\n",
+       "  <div id='uuid-2673747c-3512-4bd6-a881-8a45dbac7e1e'></div>\n",
        "  <script>\n",
        "  requirejs.config({\n",
        "    baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -34,7 +45,7 @@
        "  });\n",
        "  require(['vega-embed'], function(vegaEmbed) {\n",
        "    let spec = {\"data\":{\"url\":\"https:\\/\\/vega.github.io\\/vega-lite\\/data\\/cars.json\"},\"mark\":\"point\",\"encoding\":{\"x\":{\"field\":\"Horsepower\",\"type\":\"quantitative\"},\"y\":{\"field\":\"Miles_per_Gallon\",\"type\":\"quantitative\"},\"color\":{\"field\":\"Origin\",\"type\":\"nominal\"}}};\n",
-       "    vegaEmbed('#uuid-d9664aa6-5451-4c5e-975d-a76a6e63fc60', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "    vegaEmbed('#uuid-2673747c-3512-4bd6-a881-8a45dbac7e1e', spec, {defaultStyle:true}).catch(console.warn);\n",
        "    }, function(err) {\n",
        "    console.log('Failed to load');\n",
        "  });\n",
@@ -43,7 +54,7 @@
        "  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +82,7 @@
       "text/html": [
        "<div><h1>A little hiccup example</h1><p>Try drinking a glass of water with your head upside down</p>\n",
        "<div>\n",
-       "  <div id='uuid-78e7cfcb-5e0d-4dcf-b646-cd406f55cb81'></div>\n",
+       "  <div id='uuid-2c669306-7885-404e-b4c2-dc062cb20e4f'></div>\n",
        "  <script>\n",
        "  requirejs.config({\n",
        "    baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -84,7 +95,7 @@
        "  });\n",
        "  require(['vega-embed'], function(vegaEmbed) {\n",
        "    let spec = {\"data\":{\"url\":\"https:\\/\\/vega.github.io\\/vega-lite\\/data\\/cars.json\"},\"mark\":\"point\",\"encoding\":{\"x\":{\"field\":\"Horsepower\",\"type\":\"quantitative\"},\"y\":{\"field\":\"Miles_per_Gallon\",\"type\":\"quantitative\"},\"color\":{\"field\":\"Origin\",\"type\":\"nominal\"}}};\n",
-       "    vegaEmbed('#uuid-78e7cfcb-5e0d-4dcf-b646-cd406f55cb81', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "    vegaEmbed('#uuid-2c669306-7885-404e-b4c2-dc062cb20e4f', spec, {defaultStyle:true}).catch(console.warn);\n",
        "    }, function(err) {\n",
        "    console.log('Failed to load');\n",
        "  });\n",
@@ -93,7 +104,7 @@
        "  </div>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +127,7 @@
       "text/html": [
        "\n",
        "<div>\n",
-       "  <div id='uuid-2d388fa2-24e8-4d2b-b2a4-75589c00415f'></div>\n",
+       "  <div id='uuid-c1fbee54-84b0-43e9-b35c-7feecc407f9e'></div>\n",
        "  <script>\n",
        "  requirejs.config({\n",
        "    baseUrl: 'https://cdn.jsdelivr.net/npm/',\n",
@@ -129,7 +140,7 @@
        "  });\n",
        "  require(['vega-embed'], function(vegaEmbed) {\n",
        "    let spec = {\"style\":\"cell\",\"width\":200,\"height\":200,\"data\":[{\"name\":\"source_0\",\"url\":\"https:\\/\\/vega.github.io\\/editor\\/data\\/cars.json\",\"format\":{\"type\":\"json\"}}],\"marks\":[{\"name\":\"marks\",\"type\":\"symbol\",\"style\":[\"point\"],\"from\":{\"data\":\"source_0\"},\"encode\":{\"update\":{\"stroke\":{\"scale\":\"color\",\"field\":\"Origin\"},\"x\":{\"scale\":\"x\",\"field\":\"Horsepower\"},\"y\":{\"scale\":\"y\",\"field\":\"Miles_per_Gallon\"}}}}],\"scales\":[{\"name\":\"x\",\"type\":\"linear\",\"domain\":{\"data\":\"source_0\",\"field\":\"Horsepower\"},\"range\":[0,{\"signal\":\"width\"}]},{\"name\":\"y\",\"type\":\"linear\",\"domain\":{\"data\":\"source_0\",\"field\":\"Miles_per_Gallon\"},\"range\":[{\"signal\":\"height\"},0]},{\"name\":\"color\",\"type\":\"ordinal\",\"domain\":{\"data\":\"source_0\",\"field\":\"Origin\"},\"range\":\"category\"}]};\n",
-       "    vegaEmbed('#uuid-2d388fa2-24e8-4d2b-b2a4-75589c00415f', spec, {defaultStyle:true}).catch(console.warn);\n",
+       "    vegaEmbed('#uuid-c1fbee54-84b0-43e9-b35c-7feecc407f9e', spec, {defaultStyle:true}).catch(console.warn);\n",
        "    }, function(err) {\n",
        "    console.log('Failed to load');\n",
        "  });\n",
@@ -138,7 +149,7 @@
        "  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
